cmake_minimum_required(VERSION 3.0.0)
project(leetcode VERSION 0.1.0 LANGUAGES C CXX)

add_subdirectory("Find Eventual Safe States")
add_subdirectory("LRU Cache")
add_subdirectory("Roman to Integer")
add_subdirectory("Move Zeroes")
add_subdirectory("Sqrt(x)")
add_subdirectory("Reverse Linked List")
add_subdirectory("Longest Common Prefix")
add_subdirectory("Valid Parentheses")
add_subdirectory("Merge Two Sorted Lists")
add_subdirectory("Remove Duplicates from Sorted Array")
add_subdirectory("Find the Index of the First Occurrence in a String")
add_subdirectory("Search Insert Position")
add_subdirectory("Length of Last Word")
add_subdirectory("Best Time to Buy and Sell Stock")
add_subdirectory("Pow(x, n)")
add_subdirectory("Plus One")
add_subdirectory("Add Binary")
add_subdirectory("Climbing Stairs")
add_subdirectory("Remove Duplicates from Sorted List")
add_subdirectory("Binary Tree Inorder Traversal")
add_subdirectory("Same Tree")
add_subdirectory("Symmetric Tree")
add_subdirectory("Maximum Depth of Binary Tree")
add_subdirectory("Convert Sorted Array to Binary Search Tree")
add_subdirectory("Balanced Binary Tree")
add_subdirectory("Minimum Depth of Binary Tree")
add_subdirectory("Path Sum")
add_subdirectory("Pascal's Triangle")
add_subdirectory("Pascal's Triangle II")
add_subdirectory("Valid Palindrome")
add_subdirectory("Single Number")
add_subdirectory("Linked List Cycle")
add_subdirectory("Binary Tree Preorder Traversal")
add_subdirectory("Binary Tree Postorder Traversal")
add_subdirectory("Intersection of Two Linked Lists")
add_subdirectory("Excel Sheet Column Title")
add_subdirectory("Majority Element")
add_subdirectory("Excel Sheet Column Number")
add_subdirectory("Number of Good Pairs")
add_subdirectory("Design HashMap")
add_subdirectory("Reverse Bits")

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
